# rayz-weapon

./: .gitignore  CMakeLists.txt  README.md  platformio.ini  sdkconfig.defaults  sdkconfig.weapon
include/: config.h  debug_print.h  display_init.h  display_manager.h  gpio_init.h  lv_conf.h  runtime_metrics.h  tasks.h
src/: CMakeLists.txt  config.h  debug_print.cpp  display_init.cpp  display_manager.cpp  gpio_init.cpp  main.cpp  runtime_metrics.cpp
src/tasks/: ble_task.cpp  control_task.cpp  display_task.cpp  espnow_task.c  game_task.cpp  laser_task.cpp  wifi_task.c  ws_task.cpp
