idf_component_register(
    SRCS 
        "main.cpp"
        "tasks/control_task.cpp"
        "tasks/laser_task.cpp"
        "tasks/ws_task.cpp"
        "tasks/game_task.cpp"
        "tasks/espnow_task.c"
        "tasks/wifi_task.c"
    INCLUDE_DIRS 
        "../include"
    REQUIRES
        driver
        nvs_flash
        shared
        esp_websocket_client
)
